[gd_scene load_steps=3 format=3 uid="uid://2kf0txgokhh1"]

[ext_resource type="Script" path="res://addons/config_file_setting/scenes/plugin_create_setting_config_manager_window/plugin_create_setting_config_manager_window.gd" id="1_kf01c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f78b1"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="PluginCreateSettingConfigManagerWindow" type="Window"]
title = "Create SettingConfigManager"
initial_position = 2
size = Vector2i(1000, 350)
transient = true
transient_to_focused = true
exclusive = true
min_size = Vector2i(800, 350)
script = ExtResource("1_kf01c")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f78b1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "SettingConfigManager Path"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LineEditSettingConfigManager" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonSetSettingConfigManagerPath" type="Button" parent="Panel/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Set SettingConfigManager Path"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer3/VBoxContainer2"]
layout_mode = 2
text = "SettingData Path"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer3/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="LineEditSettingData" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonChooseSettingDataPath" type="Button" parent="Panel/VBoxContainer/MarginContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Choose SettingData Path"

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="MarginContainer5" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer5"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ButtonOK" type="Button" parent="Panel/VBoxContainer/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "OK "

[node name="ButtonCancel" type="Button" parent="Panel/VBoxContainer/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel "

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/ButtonSetSettingConfigManagerPath" to="." method="_on_button_set_setting_config_manager_path_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer3/VBoxContainer2/HBoxContainer/ButtonChooseSettingDataPath" to="." method="_on_button_choose_setting_data_path_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer5/HBoxContainer/ButtonOK" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer5/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
